--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="sketch-container">
 
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
