Added reset button functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <button class="btn reset-btn">Reset</button>
         <div class="sketch-container">
 
          </div>
