Base game completed, branching to style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn reset-btn">Reset</button>
+        <div class="title-container">
+            <h1 class="title">Etch-a-Sketch</h1>
+        </div>
+        <div class="btn-container">
+            <button class="btn reset-btn">Reset</button>
+        </div>
         <div class="sketch-container">
 
          </div>
