Added basic styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Etch-a-Sketch</title>
 </head>
 <body>
@@ -13,7 +16,7 @@
             <h1 class="title">Etch-a-Sketch</h1>
         </div>
         <div class="btn-container">
-            <button class="btn reset-btn">Reset</button>
+            <button class="reset-btn">Reset</button>
         </div>
         <div class="sketch-container">
 
