Added more styling and customization

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="title-container">
-            <h1 class="title">Etch-a-Sketch</h1>
+            <h1 class="title">Etch-<span class="red-text">a</span>-Sketch</h1>
         </div>
         <div class="btn-container">
             <button class="reset-btn">Reset</button>
