Updated program to prevent gameplay on load

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <h1 class="title">Etch-<span class="red-text">a</span>-Sketch</h1>
         </div>
         <div class="btn-container">
-            <button class="reset-btn">Reset</button>
+            <button class="btn reset-btn hidden">Reset</button>
+            <button class="btn play-btn">Play</button>
         </div>
-        <div class="sketch-container">
+        <div class="sketch-container hidden">
 
          </div>
     </div>
